--- a/Pokedex/PokemonSelected/PokemonSelected/PokemonSelectedVc.storyboard
+++ b/Pokedex/PokemonSelected/PokemonSelected/PokemonSelectedVc.storyboard
@@ -12,7 +12,7 @@
         <!--Pokemon Selected Vc-->
         <scene sceneID="FSK-3g-4HI">
             <objects>
-                <viewController storyboardIdentifier="pokemon" id="EfK-HS-OBD" customClass="PokemonSelectedVc" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PokemonSelectedVc" useStoryboardIdentifierAsRestorationIdentifier="YES" id="EfK-HS-OBD" customClass="PokemonSelectedVc" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xZc-em-SYW">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
