--- a/Pokedex/PokemonSelected/PokemonSelected/PokemonSelectedVc.storyboard
+++ b/Pokedex/PokemonSelected/PokemonSelected/PokemonSelectedVc.storyboard
@@ -19,15 +19,6 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K7y-wS-Z1d">
                                 <rect key="frame" x="0.0" y="0.0" width="390" height="600"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bulbasaur" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxD-ml-ytI">
-                                        <rect key="frame" x="10" y="134" width="370" height="49"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="35"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="600" id="Ins-fi-N1W" customClass="NSLayoutHelper" customModule="LayoutHelper">
@@ -64,10 +55,10 @@
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CJ4-9Y-qVh">
-                                <rect key="frame" x="0.0" y="444" width="390" height="400"/>
+                                <rect key="frame" x="0.0" y="414" width="390" height="430"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Planta" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKh-Ad-1ue">
-                                        <rect key="frame" x="80" y="66" width="103" height="21"/>
+                                        <rect key="frame" x="80" y="55" width="103" height="21"/>
                                         <color key="backgroundColor" red="0.090867781643473575" green="0.66176067759292301" blue="0.014625156388728655" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="103" id="XZk-tL-agf"/>
@@ -78,7 +69,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Venenoso" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pOP-O8-6Cs">
-                                        <rect key="frame" x="207" y="66" width="103" height="21"/>
+                                        <rect key="frame" x="207" y="55" width="103" height="21"/>
                                         <color key="backgroundColor" red="0.81314018904737895" green="0.29468450680747105" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="KHg-ic-CMH"/>
@@ -89,7 +80,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="o4R-Ro-HrG">
-                                        <rect key="frame" x="0.0" y="113" width="390" height="287"/>
+                                        <rect key="frame" x="0.0" y="113" width="390" height="317"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vuz-DW-Z1o">
                                             <size key="itemSize" width="128" height="128"/>
@@ -103,18 +94,18 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="o4R-Ro-HrG" secondAttribute="trailing" id="7To-p7-Qxt"/>
-                                    <constraint firstItem="pOP-O8-6Cs" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="66" id="7Wg-Um-BXN"/>
+                                    <constraint firstItem="pOP-O8-6Cs" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="55" id="7Wg-Um-BXN"/>
                                     <constraint firstItem="o4R-Ro-HrG" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" id="ING-34-K8e"/>
-                                    <constraint firstAttribute="height" constant="400" id="JFq-HE-9ft" customClass="NSLayoutHelper" customModule="LayoutHelper">
+                                    <constraint firstAttribute="height" constant="430" id="JFq-HE-9ft" customClass="NSLayoutHelper" customModule="LayoutHelper">
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
-                                                <real key="value" value="400"/>
+                                                <real key="value" value="430"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
-                                                <real key="value" value="300"/>
+                                                <real key="value" value="340"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE2G">
-                                                <real key="value" value="300"/>
+                                                <real key="value" value="340"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </constraint>
@@ -134,7 +125,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </constraint>
                                     <constraint firstItem="o4R-Ro-HrG" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="113" id="whk-9e-KyU"/>
-                                    <constraint firstItem="bKh-Ad-1ue" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="66" id="yFy-5d-5z0"/>
+                                    <constraint firstItem="bKh-Ad-1ue" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="55" id="yFy-5d-5z0"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bubasauro" translatesAutoresizingMaskIntoConstraints="NO" id="IC3-T9-cyx">
@@ -153,6 +144,15 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="evaluation-empty-star-evaluation-infographic-icon-with-png-355165-removebg-preview 1"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bulbasaur" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxD-ml-ytI">
+                                <rect key="frame" x="10" y="110" width="370" height="49"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="itr-qq-kcV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="35"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nº 001" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GiE-bE-6Q3">
                                 <rect key="frame" x="165.66666666666666" y="178" width="58.666666666666657" height="28"/>
                                 <fontDescription key="fontDescription" name="KohinoorDevanagari-Regular" family="Kohinoor Devanagari" pointSize="20"/>
@@ -167,19 +167,20 @@
                             <constraint firstItem="WgH-X6-wHS" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="120" id="1OD-hB-diH" customClass="NSLayoutHelper" customModule="LayoutHelper">
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
-                                        <real key="value" value="100"/>
+                                        <real key="value" value="70"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE2G">
-                                        <real key="value" value="100"/>
+                                        <real key="value" value="70"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
-                                        <real key="value" value="220"/>
+                                        <real key="value" value="200"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </constraint>
                             <constraint firstItem="bWG-dW-4Xd" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" constant="30" id="2CO-we-obg"/>
                             <constraint firstItem="IC3-T9-cyx" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" constant="60" id="5fl-QY-XXf"/>
                             <constraint firstItem="WgH-X6-wHS" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" id="7wJ-dr-wMY"/>
+                            <constraint firstItem="qxD-ml-ytI" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" constant="10" id="8Xw-1y-Zwf"/>
                             <constraint firstItem="GiE-bE-6Q3" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="131" id="EfL-uK-jiY" customClass="NSLayoutHelper" customModule="LayoutHelper">
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
@@ -195,22 +196,35 @@
                             </constraint>
                             <constraint firstItem="K7y-wS-Z1d" firstAttribute="leading" secondItem="xZc-em-SYW" secondAttribute="leading" id="F0d-ON-Id9"/>
                             <constraint firstItem="K7y-wS-Z1d" firstAttribute="top" secondItem="xZc-em-SYW" secondAttribute="top" id="H1r-MM-5US"/>
+                            <constraint firstItem="qxD-ml-ytI" firstAttribute="top" secondItem="xZc-em-SYW" secondAttribute="top" constant="110" id="LAX-aQ-H3K" customClass="NSLayoutHelper" customModule="LayoutHelper">
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
+                                        <real key="value" value="80"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE2G">
+                                        <real key="value" value="80"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
+                                        <real key="value" value="200"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </constraint>
                             <constraint firstItem="IC3-T9-cyx" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="215" id="N8I-Io-lgn" customClass="NSLayoutHelper" customModule="LayoutHelper">
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
-                                        <real key="value" value="170"/>
+                                        <real key="value" value="145"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE2G">
-                                        <real key="value" value="170"/>
+                                        <real key="value" value="145"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
-                                        <real key="value" value="300"/>
+                                        <real key="value" value="280"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhone11Pro">
-                                        <real key="value" value="175"/>
+                                        <real key="value" value="160"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhone12Mini">
-                                        <real key="value" value="175"/>
+                                        <real key="value" value="160"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </constraint>
@@ -219,6 +233,7 @@
                             <constraint firstAttribute="trailing" secondItem="CJ4-9Y-qVh" secondAttribute="trailing" id="WMy-qE-e7E"/>
                             <constraint firstItem="bWG-dW-4Xd" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="20" id="Wwd-Wh-Rir"/>
                             <constraint firstItem="GiE-bE-6Q3" firstAttribute="centerX" secondItem="xZc-em-SYW" secondAttribute="centerX" id="dDp-a0-0jn"/>
+                            <constraint firstItem="Q1J-hB-kOf" firstAttribute="trailing" secondItem="qxD-ml-ytI" secondAttribute="trailing" constant="10" id="i4C-z8-1b9"/>
                             <constraint firstItem="Q1J-hB-kOf" firstAttribute="trailing" secondItem="50x-p5-15w" secondAttribute="trailing" constant="20" id="mvQ-UV-9ak"/>
                             <constraint firstItem="50x-p5-15w" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="10" id="nyy-4G-VIc"/>
                             <constraint firstAttribute="bottom" secondItem="CJ4-9Y-qVh" secondAttribute="bottom" id="tin-pz-f6J"/>
